# Modules

./: .gitignore  .gitignore~  Modules.ipynb  README.md  gain_studies.py  header.py  mapping.txt  methods.py  noise_studies.py  reception_comparison.py  run.py  singles_comparison.py  site_comparison.py
.ipynb_checkpoints/: Modules-checkpoint.ipynb
BNL_Test_Data/misc/: strun32809_28.root  strun32870_42.root
analysis_IBL/: COMPILING  Makefile  Makefile.in  Makefile~  config.h  config.status  configure  configure.ac
analysis_IBL/.svn/: dir-prop-base  entries
analysis_IBL/autom4te.cache/: output.1  traces.0  traces.1
analysis_IBL/src/: #HistoReader.cc#  Analysis.cc  Analysis.cc~  Analysis.hh  Astave.cc~  Astave.hh  DbTools.hh  ENC.C  HistoReader.hh  IVMeasurementPoint.hh  MainGui.cc  MainGui.cc~  MainGui.hh  Makefile  Makefile.in  ScanDef.cc  ToT.C  ToT.C   ToT_mean.C  dict.cc  dict.h  distroIVmodules  iv_distribution  iv_distribution.eps  iv_distro.C  main.cc  noise_mean.C  thmean.C  thresh_mean.C
analysis_IBL/src/.deps/: iblsla-Analysis.Po  iblsla-Astave.Po  iblsla-DbTools.Po  iblsla-HistoReader.Po  iblsla-MainGui.Po  iblsla-ScanDef.Po  iblsla-Sr1_converter.Po  iblsla-dict.Po  iblsla-main.Po
analysis_IBL/src/.svn/: dir-prop-base  entries
analysis_IBL/src/.svn/text-base/: Analysis.cc.svn-base  Astave.cc.svn-base  DbTools.cc.svn-base  MainGui.cc.svn-base  Makefile.am.svn-base  ScanDef.hh.svn-base  Sr1_converter.cc.svn-base  Sr1_converter.hh.svn-base
input/Apr2019/: ABC130_BNL_20_1_RC_2799_56.txt  ABC130_BNL_20_2_RC_2799_56.txt  (+14 more)
misc/: strun32782_dcs.root
(+431 files in other folders)
